kustomize/overlays/api/ude-oslo-kommune-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-vurdering
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`api.felleskomponent.no`) && (PathPrefix( `/utdanning/vurdering/elevfravar`)) && Headers(`x-org-id`, `ude.oslo.kommune.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-vurdering
          port: 8080
